# wxsolitaire

./: CMakeLists.txt  README.md  cards.xrc  help_mac.h  help_mac.mm  sol.rc  solitaire.icns  wxSolitaire.6  wxSolitaire.desktop  wxSolitaire.metainfo.xml  wxsol.h  wxsol_cards.cpp  wxsol_col.cpp  wxsol_game.cpp  wxsol_main.cpp  wxsol_util.cpp  wxsolitaire.chm
wxsolitaire.help/Contents/: Info.plist
wxsolitaire.help/Contents/Resources/en.lproj/: index.html  shared.css  wxsolitaire.helpindex
wxsolitaire.help/Contents/Resources/en.lproj/html/: sol28bz.html  sol39gm.html  sol5h42.html  sol788g.html  sol8kx9.html  sol9k6x.html
wxsolitairechm/: wxsolitaire.hhp
